--- a/Workout/app/src/main/AndroidManifest.xml
+++ b/Workout/app/src/main/AndroidManifest.xml
@@ -11,10 +11,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-        <activity android:name=".DetailActivity"/>
+        <activity android:name=".TempActivity"/>
+        <activity android:name=".DetailActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
