--- a/CinemaReview/app/src/main/AndroidManifest.xml
+++ b/CinemaReview/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.uabc.amc.cinemareview">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".pages.MovieDescriptionItem"></activity>
+        <activity android:name=".pages.MovieDescriptionItem"/>
         <activity android:name=".pages.RegisterActivity" />
         <activity android:name=".pages.MoviesActivity">
             <intent-filter>
