--- a/CinemaReview/app/build.gradle
+++ b/CinemaReview/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx:22.0.0'
+    implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.firebaseui:firebase-ui-storage:6.4.0'
     api 'com.google.android.material:material:1.3.0-alpha04'
 
